force-app/main/default/objects/cgcloud__Fund_Transaction__c/cgcloud__Fund_Transaction__c.object-meta.xml
<CustomObject>
    <description>Transaction for Funds.</description>
    <label>Fund Transaction</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Fund Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>