force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Anchor_Customer__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Customer__c</fullName>
    <description>Display Anchor Customer from Fund</description>
    <formula>CASE( cgcloud__Transaction_Type__c , &apos;Drawback&apos;, cgcloud__Source_Fund__r.cgcloud__Anchor_Account__r.Name, cgcloud__Target_Fund__r.cgcloud__Anchor_Account__r.Name)</formula>
    <label>Anchor Customer</label>
    <type>Text</type>
</CustomField>