force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Transaction Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>