force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Fund_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Description__c</fullName>
    <description>Display Fund Description</description>
    <formula>CASE( cgcloud__Transaction_Type__c , &apos;Drawback&apos;, HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp;  cgcloud__Source_Fund__c  &amp; &quot;/view&quot;, cgcloud__Source_Fund__r.cgcloud__Description__c   ), 
HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp;  cgcloud__Target_Fund__c  &amp; &quot;/view&quot;, cgcloud__Target_Fund__r.cgcloud__Description__c   ))</formula>
    <label>Fund Description</label>
    <type>Text</type>
</CustomField>