force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Fund_Transaction_Header__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Transaction_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Fund Transaction Header which dictates behavior of Fund transaction rows to be created</description>
    <label>Multi-Fund Transaction</label>
    <referenceTo>cgcloud__Fund_Transaction_Header__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Fund_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>