force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Fund_Transaction_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Transaction_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to transaction template</description>
    <label>Fund Transaction Template</label>
    <referenceTo>cgcloud__Fund_Transaction_Template__c</referenceTo>
    <relationshipLabel>Fund Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>