force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Fund_Transaction_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Transaction_Template_Description__c</fullName>
    <formula>cgcloud__Fund_Transaction_Template__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Transaction Template Description</label>
    <type>Text</type>
</CustomField>