force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Source_Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source fund for the transaction</description>
    <label>Source Fund</label>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>