force-app/main/default/objects/cgcloud__Fund_Transaction__c/fields/cgcloud__Target_Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Fund__c</fullName>
    <description>Target fund for the transaction</description>
    <label>Target Fund</label>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipName>Transactions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>