force-app/main/default/objects/cgcloud__Fund_Transaction__c/validationRules/cgcloud__Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c),
OR(ISBLANK(cgcloud__Amount__c),cgcloud__Amount__c &lt;=0))</errorConditionFormula>
    <errorMessage>Transaction Amount should be greater than 0.</errorMessage>
</ValidationRule>