force-app/main/default/objects/cgcloud__Fund_Transaction__c/validationRules/cgcloud__Sales_Org_Mismatch_Source_Target.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Mismatch_Source_Target</fullName>
    <active>true</active>
    <description>The Source Fund and the Target Fund must have the same Sales Org.</description>
    <errorConditionFormula>AND
          (
             cgcloud__Transaction_Type__c = &quot;Transfer&quot;,
             cgcloud__Source_Fund__r.cgcloud__Sales_Org__c &lt;&gt; cgcloud__Target_Fund__r.cgcloud__Sales_Org__c
          )</errorConditionFormula>
    <errorMessage>The Source Fund and the Target Fund must have the same Sales Org.</errorMessage>
</ValidationRule>