force-app/main/default/objects/cgcloud__Fund_Transaction__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Fund_Transaction_Template_Description__c</columns>
    <columns>cgcloud__Transaction_Type__c</columns>
    <columns>cgcloud__Date__c</columns>
    <columns>cgcloud__Source_Fund__c</columns>
    <columns>cgcloud__Target_Fund__c</columns>
    <columns>cgcloud__Amount__c</columns>
    <columns>cgcloud__Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>